--- a/index.html
+++ b/index.html
@@ -4,54 +4,85 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cookie Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header>
-      <h1>Cookie Store</h1>
-      <p>Buy our awesome cookies. All proceeds go to charity!</p>
+      <div class="bg-image p-5 text-white d-flex justify-content-center align-items-center"
+            style="background-image: url('images/coffee-biscuits.jpg');"
+            id="bg--img"
+      >
+        <div class="p-5 d-flex flex-column justify-content-center align-items-center" id="text--box">
+          <h1>Cookie Store</h1>
+          <p>Buy our awesome cookies. All proceeds go to charity!</p> 
+        </div>
+      </div>
     </header>
 
     <main>
-      <h2>Our Cookies</h2>
-      <p>Checkout our latest and delicious cookies.</p>
+      <div class="container">
+        <div class="row text-center m-5 ">
+          <h2>Our Cookies</h2>
+          <p>Checkout our latest and delicious cookies.</p>
+        </div>
 
-      <h3>Mint Chocolate</h3>
-      <p>Tasty mint chocolate cookies</p>
-      <img src="images/mint-cookie.png" alt="A single mint chocolate cookie" />
+        <div class="row text-center">
+          <div class="col-lg-3 col-md-6">
+            <h3>Mint Chocolate</h3>
+            <p>Tasty mint chocolate cookies</p>
+            <img src="images/mint-cookie.png" class="rounded-circle" alt="A single mint chocolate cookie" />
+          </div>
 
-      <h3>Peanut Butter</h3>
-      <p>Yummy peanut buttery goodness</p>
-      <img src="images/peanut-cookie.png" alt="A single peanut butter cookie" />
+          <div class="col-lg-3 col-md-6">
+            <h3>Peanut Butter</h3>
+            <p>Yummy peanut buttery goodness</p>
+            <img src="images/peanut-cookie.png" class="rounded-circle" alt="A single peanut butter cookie" />            
+          </div>
 
-      <h3>Oatmeal</h3>
-      <p>Your fitness instructors favorite</p>
-      <img src="images/oatmeal-cookie.png" alt="A single oatmeal cookie" />
+          <div class="col-lg-3 col-md-6">
+            <h3>Oatmeal</h3>
+            <p>Your fitness instructors favorite</p>
+            <img src="images/oatmeal-cookie.png" class="rounded-circle" alt="A single oatmeal cookie" />            
+          </div>
 
-      <h3>Chocolate Chip</h3>
-      <p>Gooey chocolate you'll love</p>
-      <img src="images/chip-cookie.png" alt="A single chocolate chip cookie" />
+          <div class="col-lg-3 col-md-6">
+            <h3>Chocolate Chip</h3>
+            <p>Gooey chocolate you'll love</p>
+            <img src="images/chip-cookie.png" class="rounded-circle" alt="A single chocolate chip cookie" />            
+          </div>
+        </div>
+      </div>
     </main>
-    <div>
-      <h2>About us</h2>
 
-      <img src="images/bakers.svg" alt="illustrations of two people baking" />
-      <div>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim id est laborum.
+
+    <div class="mt-5 p-5 bg-light">
+      <h2 class="text-center">About us</h2>
+
+      <div class="text-left d-inline-flex p-3" style="gap: 20px;">
+        <img src="images/bakers.svg" class="rounded-circle" style="width: auto; height: 100px" alt="illustrations of two people baking" />
+        <div>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+          velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+          occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+          mollit anim id est laborum.
+        </div>
       </div>
     </div>
-    <footer>
-      <h2>Contact us</h2>
-      <div>
-        100 Broadway Avenue,<br />
-        New York, NY 10001 <br />
-        (212) 555-1234
-      </div>
-    </footer>
+
+    <div class="bg-primary text-center p-5 text-white">
+      <footer>
+        <h2>Contact us</h2>
+        <div>
+          100 Broadway Avenue,<br />
+          New York, NY 10001 <br /> 
+          (212) 555-1234
+        </div>
+      </footer>
+    </div>
+   
   </body>
 </html>
