Finished Alternating page

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <header>
-      <div class="bg-image p-5 text-white d-flex justify-content-center align-items-center"
+      <div class="bg-image text-white d-flex justify-content-center align-items-center"
             style="background-image: url('images/coffee-biscuits.jpg');"
             id="bg--img"
       >
-        <div class="p-5 d-flex flex-column justify-content-center align-items-center" id="text--box">
+        <div class="p-5 text-center flex-column justify-content-center align-items-center" id="text--box">
           <h1>Cookie Store</h1>
           <p>Buy our awesome cookies. All proceeds go to charity!</p> 
         </div>
@@ -22,33 +22,33 @@
 
     <main>
       <div class="container">
-        <div class="row text-center m-5 ">
+        <div class="row text-center m-5">
           <h2>Our Cookies</h2>
           <p>Checkout our latest and delicious cookies.</p>
         </div>
 
         <div class="row text-center">
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 col-sm-12">
             <h3>Mint Chocolate</h3>
             <p>Tasty mint chocolate cookies</p>
             <img src="images/mint-cookie.png" class="rounded-circle" alt="A single mint chocolate cookie" />
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 col-sm-12">
             <h3>Peanut Butter</h3>
-            <p>Yummy peanut buttery goodness</p>
+            <p>Yummy peanut buttery goodness</p>              
             <img src="images/peanut-cookie.png" class="rounded-circle" alt="A single peanut butter cookie" />            
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 col-sm-12">
             <h3>Oatmeal</h3>
-            <p>Your fitness instructors favorite</p>
+            <p>Your fitness instructors favorite</p>              
             <img src="images/oatmeal-cookie.png" class="rounded-circle" alt="A single oatmeal cookie" />            
           </div>
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 col-sm-12">
             <h3>Chocolate Chip</h3>
-            <p>Gooey chocolate you'll love</p>
+            <p>Gooey chocolate you'll love</p>              
             <img src="images/chip-cookie.png" class="rounded-circle" alt="A single chocolate chip cookie" />            
           </div>
         </div>
