--- a/alternating.html
+++ b/alternating.html
@@ -3,28 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Cookie Store</title>
+    <style>
+      @media (min-width:600px){
+        .list--cookies{
+          display: flex;
+          justify-content:center;
+          align-items:center;
+          padding: 10px;
+          gap: 70px;
+        }
+  
+        .list--cookies:nth-of-type(odd){
+          flex-direction: row-reverse;
+        }
+      }
+    </style>
   </head>
+
   <body>
     <main>
-      <h2>Our Cookies</h2>
-      <p>Checkout our latest and delicious cookies.</p>
+      <div class="text-center p-5" style="width: 100%;">
+        <h2>Our Cookies</h2>
+        <p>Checkout our latest and delicious cookies.</p>        
+      </div>
 
-      <h3>Mint Chocolate</h3>
-      <p>Tasty mint chocolate cookies</p>
-      <img src="images/mint-cookie.png" alt="A single mint chocolate cookie" />
+      <div class="text-center" style="width: 100%;">
+        <div class="col-12 p-5 list--cookies">
+          <div>
+            <h3>Mint Chocolate</h3>
+            <p>Tasty mint chocolate cookies</p>
+          </div>
+          <img src="images/mint-cookie.png" class="rounded-circle" alt="A single mint chocolate cookie" />
+        </div>
 
-      <h3>Peanut Butter</h3>
-      <p>Yummy peanut buttery goodness</p>
-      <img src="images/peanut-cookie.png" alt="A single peanut butter cookie" />
+        <div class="col-12 p-5 list--cookies">
+          <div>
+            <h3>Peanut Butter</h3>
+            <p>Yummy peanut buttery goodness</p>              
+          </div>
+          <img src="images/peanut-cookie.png" class="rounded-circle" alt="A single peanut butter cookie" />            
+        </div>
 
-      <h3>Oatmeal</h3>
-      <p>Your fitness instructors favorite</p>
-      <img src="images/oatmeal-cookie.png" alt="A single oatmeal cookie" />
+        <div class="col-12 p-5 list--cookies">
+          <div>
+            <h3>Oatmeal</h3>
+            <p>Your fitness instructors favorite</p>              
+          </div>
+          <img src="images/oatmeal-cookie.png" class="rounded-circle" alt="A single oatmeal cookie" />            
+        </div>
 
-      <h3>Chocolate Chip</h3>
-      <p>Gooey chocolate you'll love</p>
-      <img src="images/chip-cookie.png" alt="A single chocolate chip cookie" />
+        <div class="col-12 p-5 list--cookies">
+          <div>
+            <h3>Chocolate Chip</h3>
+            <p>Gooey chocolate you'll love</p>              
+          </div>
+          <img src="images/chip-cookie.png" class="rounded-circle" alt="A single chocolate chip cookie" />            
+        </div>
+      </div>
     </main>
   </body>
 </html>
+
